--- a/index.html
+++ b/index.html
@@ -60,6 +60,96 @@
                 </svg>
             </div>
         </section>
+        <section class="work-section">
+            <div class="card">
+                <img src="assets/card4 (2).png" alt="card1" class="card-image" type="image">
+                <div class="cardContent">
+                    <div class="cardTitle">
+                        <h2>Tonic</h2>
+                        <div class="details">
+                            <span class="canopy">CANOPY</span>
+                            <span><img src="assets/Counter.svg"></span>
+                            <span>Back End Dev</span>
+                            <span><img src="assets/Counter.svg"></span>
+                            <span>2015</span>
+                        </div>
+                        <p>A daily selection of privately<br> personalized reads; no accounts or sign-ups required.</p>
+                        <div class="languages">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JAVASCRIPT</span>
+                        </div>
+                        <div class="seeProject">See Porjects</div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/card4 (3).png" alt="card1" class="card-image" type="image">
+                <div class="cardContent">
+                    <div class="cardTitle">
+                        <h2>Multi-Post <br>Stories</h2>
+                        <div class="details">
+                            <span class="canopy">CANOPY</span>
+                            <span><img src="assets/Counter.svg"></span>
+                            <span>Back End Dev</span>
+                            <span><img src="assets/Counter.svg"></span>
+                            <span>2015</span>
+                        </div>
+                        <p>A daily selection of privately<br> personalized reads; no accounts or sign-ups required.</p>
+                        <div class="languages">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JAVASCRIPT</span>
+                        </div>
+                        <div class="seeProject">See Porjects</div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/card4 (4).png" alt="card1" class="card-image" type="image">
+                <div class="cardContent">
+                    <div class="cardTitle">
+                        <h2>Tonic</h2>
+                        <div class="details">
+                            <span class="canopy">CANOPY</span>
+                            <span><img src="assets/Counter.svg"></span>
+                            <span>Back End Dev</span>
+                            <span><img src="assets/Counter.svg"></span>
+                            <span>2015</span>
+                        </div>
+                        <p>A daily selection of privately<br> personalized reads; no accounts or sign-ups required.</p>
+                        <div class="languages">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JAVASCRIPT</span>
+                        </div>
+                        <div class="seeProject">See Porjects</div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/card4 (1).png" alt="card1" class="card-image" type="image">
+                <div class="cardContent">
+                    <div class="cardTitle">
+                        <h2>Multi-Post <br>Stories</h2>
+                        <div class="details">
+                            <span class="canopy">CANOPY</span>
+                            <span><img src="assets/Counter.svg"></span>
+                            <span>Back End Dev</span>
+                            <span><img src="assets/Counter.svg"></span>
+                            <span>2015</span>
+                        </div>
+                        <p>A daily selection of privately<br> personalized reads; no accounts or sign-ups required.</p>
+                        <div class="languages">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JAVASCRIPT</span>
+                        </div>
+                        <div class="seeProject">See Porjects</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
