--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="menu"><img src="assets/Icon - Menu.svg" alt="Menu"></div>
         </nav>
     </header>
-    <main>
+    <main></main>
         <section class="Headline">
             <h1 class="PrimaryText">I'm Usman.<br />Glad to see you!</h1>
             <p class="PrimaryText2">I’m a software developer! I can help you build a product , feature or website Look
@@ -152,7 +152,9 @@
         </section>
         <section class="About">
             <h1 class="PrimaryText">About Myself</h1>
-            <p class="PrimaryText2">Hello I’m a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+            <p class="PrimaryText2">Hello I’m a software developer! I can help you build a product , feature or website.
+                Look through some of my work and experience! If you like what you see and have a project you need coded,
+                don’t hesitate to contact me.</p>
             <h3 class="connect"><span>LET'S CONNECT</span></h3>
             <div class="social"><svg width="171" height="20" viewBox="0 0 171 20" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -190,7 +192,15 @@
                     <span><img src="assets/down.svg"></span>
                 </div>
                 <div class="about-language-part">
-                    <img src="assets/Langguage List.png">
+                    <div class="lang-div"><img  src="assets/js.png" >
+                        <p>JavaScript</p>
+                    </div>
+                    <div class="lang-div"><img  src="assets/html.png" >
+                        <p>HTML</p>
+                    </div>
+                    <div class="lang-div"><img  src="assets/css.png" >
+                        <p>CSS</p>
+                    </div>
                 </div>
                 <div class="greaterthan">
                     <h1>Frameworks</h1>
@@ -202,7 +212,23 @@
                 </div>
             </div>
         </section>
-    </main>
+        </main>
 </body>
-
+<footer>
+    <div class="contact_form_container">
+        <img src="assets/contactmobile.png">
+        <div class="container_content">
+            <h1>Contact me</h1>
+            <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
+                I’d love to help with it!</p>
+                <form action="" method="post">
+                    <input type="text" placeholder="Enter your name" maxlength="30">
+                <input type="email" placeholder="Enter your Email" required>
+                <textarea rows="4" cols="50" required placeholder="Write your message here..." maxlength="500">     
+                </textarea>
+                <button class="form-button" type="submit">Get in touch</button>
+                </form>  
+        </div> 
+    </div>
+</footer>
 </html>
