--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <h1>Contact me</h1>
             <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
                 I’d love to help with it!</p>
-                <form action="" method="post">
+                <form action="https://formspree.io/f/xdorpgqe" method="post">
                     <input type="text" placeholder="Enter your name" maxlength="30">
                 <input type="email" placeholder="Enter your Email" required>
                 <textarea rows="4" cols="50" required placeholder="Write your message here..." maxlength="500">     
