--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
             I’d love to help with it!</p>
         <input type="text" placeholder="Enter your name" maxlength="30">
         <input type="email" placeholder="Enter your Email" required>
-        <textarea rows="4" cols="50" required placeholder="Write your message here..." maxlength="500">
-            </textarea>
-        <button class="form-button" type="submit">Get in touch</button>
+        <textarea name="message" placeholder="Write your message here..." cols="30" rows="10" required></textarea>
+            <div><button class="form-button" type="submit">Get in touch</button></div>
+        
     </form>
 </body>
 
